workloads/podinfo/podinfo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo
        image: registry.services.labk3s.perihelion.lan/podinfo:1.0.0
        imagePullPolicy: Always # You should use IfNotPresent in any other environment than development.
        ports: 
          - name: web
            containerPort: 8080
        securityContext:
          runAsUser: 1000       # Specify a non-root user ID
          runAsGroup: 1000      # Specify a non-root group ID
          allowPrivilegeEscalation: false # Prevent privilege escalation
          runAsNonRoot: true       # Ensure the container runs as a non-root user
        resources:
          requests:
            cpu: 100m
            memory: 8Mi
          limits:
            cpu: 300m
            memory: 16Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: podinfo
#   namespace: hello
#   annotations:
#     # add an annotation indicating the issuer to use.
#     cert-manager.io/cluster-issuer: my-ca-issuer
#     # configuring the certificate
#     cert-manager.io/common-name: "podinfo.services.labk3s.perihelion.lan/"
#     cert-manager.io/subject-organizations: "Home Lab"
#     cert-manager.io/subject-organizationalunits: "K3s Lab"
#     cert-manager.io/duration: 720h
#     cert-manager.io/renew-before: 240h
#     cert-manager.io/usages: "digital signature,key agreement,server auth, client auth"
# spec:
#   rules:
#   - host: "podinfo.services.labk3s.perihelion.lan"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: podinfo
#             port:
#               number: 80
#   tls:
#   - hosts:
#     - podinfo.services.labk3s.perihelion.lan
#     secretName: podinfo-cert
